# calcu

./: README.md  calcu.py  calculon.py  install  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
