[build-system]
requires = [
    "setuptools>=65",
    "wheel>=0.37.1",
    "setuptools-scm[toml]>=7.0.5",
]
build-backend = "setuptools.build_meta"

[project]
name = "calcu"
description = "Very simple Python calculator for your terminal"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

authors = [
    {name = "Chris Arderne", email="chris@rdrn.me"},
]

keywords = ["calculator", "cli"]

dynamic = ["version"]

classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Unix",
  "Programming Language :: Python",
]

[tool.setuptools]
zip-safe = true
include-package-data = false
py-modules = ["calcu"]

[project.scripts]
c = "calcu:cli"

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "setuptools-scm",
    "tox",
    "twine",
]

[project.urls]
homepage = "https://github.com/carderne/calcu"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = ".git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist"

[tool.mypy]
ignore_missing_imports = true
pretty = true
show_error_codes = true
show_error_context = true
show_traceback = true

[tool.isort]
profile = "black"
skip = ".tox,.eggs,ci/templates,build,dist"
