[metadata]
name = calcu
version = attr: calcu.__version__
author = Chris Arderne
author-email = chris@rdrn.me
home-page = https://github.com/carderne/calcu
description = Very simple Python calculator for your terminal
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = calculator, cli
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: MIT License
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Other/Nonlisted Topic
project_urls =
  Bug Tracker = https://github.com/carderne/calcu/issues

[options]
zip_safe = true
include_package_data = false
python_requires = >= 3.6
py_modules = calcu

[options.entry_points]
console_scripts =
    c = calcu:cli

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:isort]
profile=black
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
